# Leviathan-Addon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  addon.js  ai_query.js  aiostreams-formatter.cjs  cache.js  db-helper.js  docker-compose.yml  engines.js  eslint.config.js  external-addons.js  formatter.js  manifest.js  p2p_handler.js  package-lock.json  package.json  ranking.js  smart_parser.js  stream_generator.js  worker.js
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md  release-please-config.json
browser-extension/: background.js  content.js  manifest.json
cinemacity-worker/: README.md  worker.js  wrangler.toml.example
config/: eslint.config.js  schema.js  source_mode.js
core/: __init__.py  app_settings.py  background_scraper_queue.js  browser_profiles.js  cache_invalidation_bus.js  cache_utils.py  config.py  config_tokens.py  debrid.py  evidence_graph.js  fallbacks.py  filter.py  formatter.py  jackett_client.py  media_identity_resolver.js  media_intelligence.js  nexus-bridge.js  observability.py  pack_intelligence.js  parity.py  preload.py  provider_execution_modes.js  ranking_profiles.py  rate_limit.py  rd.py  recent_work.js  request_context.js  request_context.py  request_queue.js  rss_ingestor.py  runtime_state.js  service_metrics.py  shared_state.py  source_mode.js  stream_fingerprint.py  stream_generator.js  stream_pipeline.py  torbox.py  torrentio.py  utils.js  (+7 more)
debrid/: alldebrid.js  (+5 more)
services/rust-shield/: Cargo.toml  Dockerfile
services/rust-shield/src/: main.rs
(+488 files in other folders)
